# GithubAgent

./: .gitignore  pyproject.toml
.github/workflows/: daily_hot_repo.yml
config/: app.example.toml
runtime/archive/: 2026-04-14.md  2026-04-15.md  2026-04-16.md
runtime/state/: delivery_state.json
src/: main.py
src/agent/: __init__.py  github_hot_repo_agent_runtime.py  prompt_factory.py  tool_registry.py
src/clients/: __init__.py  feishu_webhook_client.py  github_api_client.py  llm_provider_client.py  trendshift_browser_client.py
src/common/: __init__.py  exceptions.py  logging_utils.py
src/config/: config_loader.py
src/github_hot_repo_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/models/: __init__.py  agent_models.py  config_models.py  delivery_models.py  repository_models.py
src/services/: __init__.py  archive_service.py  delivery_state_service.py  feishu_message_builder.py
src/tools/: __init__.py  base_tool.py  delivery_tools.py  repository_tools.py  trendshift_tools.py
src/workflows/: __init__.py  daily_hot_repo_workflow.py
tests/: test_agent_runtime.py  test_archive_service.py  test_config_loader.py  test_daily_hot_repo_workflow.py  test_delivery_state_service.py  test_feishu_message_builder.py  test_feishu_webhook_client.py  test_github_api_client.py  test_llm_provider_client.py  test_main.py  test_tools.py  test_trendshift_browser_client.py  test_vectorengine_real_chat_completions.py
tests/fixtures/: trendshift_daily_explore.html
